--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:PM2E1507673"
-             x:Class="PM2E1507673.App">
+             x:Class="PM2E1GRUPO1.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
