--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="PM2E1507673.AppShell"
+    x:Class="PM2E1GRUPO1.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:PM2E1507673"
+    xmlns:local="clr-namespace:PM2E1GRUPO1"
     Shell.FlyoutBehavior="Disabled"
     Shell.NavBarIsVisible="False">
 
