--- a/Views/editSitio.xaml
+++ b/Views/editSitio.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="PM2E1507673.Views.editSitio"
+    x:Class="PM2E1GRUPO1.Views.editSitio"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:convert="clr-namespace:PM2E1507673.Controllers"
+    xmlns:convert="clr-namespace:PM2E1GRUPO1.Controllers"
     Title=""
     BackgroundImageSource="fondo.png">
     <ContentPage.Resources>
