--- a/Views/verMapa.xaml
+++ b/Views/verMapa.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="PM2E1507673.Views.verMapa"
+    x:Class="PM2E1GRUPO1.Views.verMapa"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:maps="http://schemas.microsoft.com/dotnet/2021/maui/maps"
@@ -48,6 +48,7 @@
                         x:Name="labelSitio"
                         Margin="0,0,30,0"
                         FontAttributes="Bold"
+                        Text="UBICACION"
                         TextColor="White"
                         VerticalOptions="CenterAndExpand" />
                 </StackLayout>
